# solkeeper

./: .gitignore  .solitarc.js  Anchor.toml  README.md  package.json
app/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
app/for-auditors/: package.json
app/for-auditors/src/: cli.ts
app/src/: UpgradeableLoaderState.ts  cli.ts  commands.ts  lib.ts  programInstructions.ts
programs/audit-verify-sol/: Cargo.toml
programs/audit-verify-sol/src/: lib.rs
programs/audit-verify-sol/tests/: normal_flow.rs
programs/solkeeper/: Cargo.toml  program-test-key.json
programs/solkeeper/src/: lib.rs
programs/solkeeper/tests/: normal_flow.rs
