[package]
name = "audit-verify-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "audit_verify_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"

[dev-dependencies]
solana-program-test = "1.16"
anchor-client = "0.28.0"
tokio = "1.32.0"
