[package]
name = "solkeeper"
version = "0.1.0"
description = "Solana on-chain verifiable audits."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solkeeper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"

[dev-dependencies]
solana-program-test = "1.16"
anchor-client = "0.28.0"
tokio = "1.32.0"
